Fixing layout issues

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -55,7 +55,7 @@
     
     .layout-container{
         display: grid;
-        grid-template-columns: 190px 89.5vw;
+        grid-template-columns: auto 89.5vw;
         grid-template-rows: 80px 72dvh 120px;
 
 }
