--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,6 +1,5 @@
 .header-content-fixed-container{
     position: fixed;
-    top: 0px;
 }
 
 .header-content-placeholder-container{
