--- a/src/assets/styles/cmps/MainNav.scss
+++ b/src/assets/styles/cmps/MainNav.scss
@@ -2,7 +2,7 @@ $primary-color: #fff;
 $secondary-color: #aaa;
 
 .main-nav {
-    min-width: 150px;
+    min-width: 160px;
     max-width: 200px;
     background-color: black;
     color: rgb(224, 224, 224);
